# tensorzero

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  composer.json  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: auto-approve-trusted-pr-workflows.yml  batch-completion-cron.yml  build-fixtures-container.yml  build-gateway-container.yml  build-gateway-e2e-container.yml  build-live-tests-container.yml  build-mock-provider-api-container.yml  build-provider-proxy-container.yml  build-ui-container.yml  caching-hack.yml  cancel-merge-queue-on-job-failure.yml  cancel-on-status-failure.yml  cancel-stale-merge-queue.yml  clickhouse-tests.yml  client-tests.yml  codeql.yml  daily-tests.yml  db-only-boot-e2e.yml  dispatch-autopilot-e2e.yml  docker-hub-publish.yml  dummy.yml  general.yml  helm-publish.yml  inference-cache-tests.yml  k3d.yml  live-batch-tests.yml  live-tests-config-in-database.yml  live-tests.yml  mocked-batch-test.yml  optimization-test-cron.yml  pr-base-branch-check.yml  pypi-publish.yml  python-client-build.yml  slash-command-autopilot-e2e.yml  slash-command-check-fork.yml  slash-command-dispatch.yml  ui-tests-e2e.yml  ui-tests.yml  upgrade-tensorzero-deps.yml
ci/: check-all-general-jobs-passed.sh  wait-for-dpkg.sh
ci/buildkite/: test-clickhouse-cloud.sh
ci/cla-bot-worker/: README.md  package-lock.json  package.json  worker.js  wrangler.toml
ci/tensorzero-bot-worker/: README.md  package-lock.json  package.json  worker.js  wrangler.toml
clients/openai-node/: package.json  pnpm-lock.yaml
clients/python/tensorzero/: generated_types.py  types.py
crates/: Cargo.toml  rust-toolchain.toml
crates/.cargo/: config.toml
crates/.config/: nextest.toml
crates/.sqlx/: query-08602f962ef3ce7d7431b534270af450af613337689502037ffcfe2f618cc780.json  query-6bf2d7c492addddbce83cd19413ad174535e7cea49b3a7ac5123c339c3aed7c0.json
crates/evaluations/: Dockerfile
crates/gateway/: Cargo.toml  Dockerfile
crates/gateway/src/: main.rs  router.rs
crates/gateway/tests/: auth.rs  logging.rs
crates/provider-proxy/: Cargo.toml  Dockerfile
crates/provider-proxy/src/: lib.rs
crates/reqwest-sse-stream/src/: lib.rs
crates/tensorzero-auth/: Cargo.toml
crates/tensorzero-auth/src/: key.rs  middleware.rs
crates/tensorzero-client/src/: test_helpers.rs
crates/tensorzero-client/tests/: tests.rs
crates/tensorzero-core/: Cargo.toml
crates/tensorzero-core/src/: model.rs  test_helpers.rs
crates/tensorzero-error/: Cargo.toml
crates/tensorzero-error/src/: lib.rs
crates/tensorzero-http/: Cargo.toml
crates/tensorzero-http/src/: api_type.rs  error.rs  lib.rs
crates/tensorzero-inference-types/: Cargo.toml
crates/tensorzero-mcp/: Cargo.toml
crates/tensorzero-node/: Cargo.toml
crates/tensorzero-node/lib/: index.ts
crates/tensorzero-node/src/: postgres.rs
crates/tensorzero-otel/: Cargo.toml
crates/tensorzero-otel/src/: error.rs  exporter_wrapper.rs  lib.rs  span_leak_detector.rs  tracing_bug.rs
crates/tensorzero-overhead/: Cargo.toml
crates/tensorzero-overhead/src/: connection_drop_guard.rs  lib.rs
crates/tensorzero-python/src/: lib.rs
crates/tensorzero-python/tensorzero/: generated_types.py  types.py
crates/tensorzero-python/tests/: conftest.py  test_client.py  test_openai_compatibility.py  test_openai_patch.py  test_stored_inferences_v1.py
crates/tensorzero-stored-config/src/: stored_gateway_config.rs
crates/tensorzero-types/: Cargo.toml
crates/ts-executor-pool/: Cargo.toml
docs/: docs.json  package.json  pnpm-lock.yaml
docs/comparison/: dspy.mdx  kong.mdx  langchain.mdx  langfuse.mdx  litellm.mdx  openpipe.mdx  openrouter.mdx
docs/deployment/: tensorzero-autopilot.mdx
docs/gateway/: index.mdx
docs/optimization/: index.mdx
examples/chess-puzzles/: README.md  pyproject.toml
examples/data-extraction-ner/: README.md  pyproject.toml
examples/haiku-hidden-preferences/: README.md  pyproject.toml
examples/production-deployment-k8s-helm/: Chart.yaml
examples/readme/: pyproject.toml
tensorzero-core/src/: cache.rs  embeddings.rs  model.rs
ui/: Dockerfile  package.json
ui/e2e_tests/: api-keys.auth.spec.ts
ui/fixtures/: Dockerfile.unit
(+163 files in other folders)
