[package]
name = "tensorzero-error"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tensorzero-http.workspace = true
tensorzero-types = { path = "../tensorzero-types" }
http = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
minijinja-utils = { path = "../minijinja-utils" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

# Feature-gated deps
axum = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
autopilot-client = { path = "../autopilot-client", optional = true }
tensorzero-otel = { path = "../tensorzero-otel", optional = true }
ts-rs.workspace = true

[features]
default = []
axum = ["dep:axum"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:tensorzero-otel"]
sqlx = ["dep:sqlx"]
redis = ["dep:redis"]
autopilot-client = ["dep:autopilot-client"]
e2e_tests = []

[lints]
workspace = true
