[package]
name = "tensorzero-http"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes = "1"
chrono.workspace = true
futures.workspace = true
http.workspace = true
http-body = "1"
once_cell = "1"
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
pin-project.workspace = true
reqwest.workspace = true
reqwest-sse-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-futures = { version = "0.2.5", features = ["futures-03"] }

# Feature-gated deps
ts-rs = { workspace = true, optional = true }

[features]
default = []
e2e_tests = []
pyo3 = []
ts-rs = ["dep:ts-rs"]

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
