[package]
name = "tensorzero-otel"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
e2e_tests = []

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
init-tracing-opentelemetry = { workspace = true }
metrics = "0.24.6"
metrics-exporter-prometheus = { workspace = true }
moka = { workspace = true }
once_cell = "1.21.4"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
tensorzero-overhead = { path = "../tensorzero-overhead" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { version = "0.14.6", default-features = false }
tracing = { workspace = true }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { workspace = true, features = [
    "http",
] }
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "json",
] }
uuid = { workspace = true }

[dev-dependencies]
gag = "1.0.0"
googletest = { workspace = true }
log = "0.4.29"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
