[package]
name = "tensorzero-overhead"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
http.workspace = true
metrics = "0.24.6"
tensorzero-http.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.23" }

[lints]
workspace = true
